# hdup

./: ChangeLog  Credits  INSTALL  Makefile.in  PKGBUILD  README  configure  configure.ac  hdup.conf.distr  postrun-warn-user  tar-1.15.1.patch
contrib/: backup.pl  cleanup.pl  hdup.sh  hdup.spec.in
doc/: FAQ.html  hdup.1  hdup.conf.5
examples/: hdup.cron  no-history-post-run.sh
src/: Makefile.in  hdup.c  hdup.h.in  hdupconf.c  hduplib.c  hdupremote.c  hduprestore.c  hduprun.c  hduptarlib.c  prototype.h  walker.c
